--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My HR Partner - Lets Be Partners</title>
     <link rel="icon" href="image/4-removebg-preview.png">
 
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+   
     <!-- Swiper.js styles -->
     <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,7 +62,7 @@
       <p>
 
 
-        “Recent research shows just how big of a difference effective HR practices can make: "Companies that are highly skilled in core  <a href="">HR practices experience</a> up to 3.5 times the revenue growth and as much as 2.1 times the profit margins of less capable companies,"
+        “Recent research shows just how big of a difference effective HR practices can make: "Companies that are highly skilled in core  <a href="https://www.shrm.org/hr-today/news/hr-magazine/pages/1112focus.aspx">HR practices experience</a> up to 3.5 times the revenue growth and as much as 2.1 times the profit margins of less capable companies,"
       </p>
     </div>
     <div class="main-image">
